# data-collector-IMU-mobile

./: .env.example  .flutter-plugins-dependencies  .gitignore  DOKUMENTASI.md  Makefile  README.md  STARTUP.md  connectivity_ops_fixes_plan.md  docker-compose.yml  mul_cam_plan_audit.md  start.ps1  templog.txt  todo_list.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  lifecycle.py  session_manager.py
backend/app/db/: migrations.py  models.py  session.py
backend/app/schemas/: annotations.py  artifacts.py  common.py  devices.py  health.py  sessions.py  video.py
backend/app/services/: annotation_audit.py  artifacts.py  clock_sync.py  csv_writer.py  ingest_pipeline.py  (+7 more)
backend/data/: metadata.db
backend/tests/: test_clock_sync_service.py  test_csv_writer.py  test_devices_register.py  test_devices_runtime_alerts.py  test_ingest_pipeline_ws_adapter.py  test_ingest_rest_validation.py  test_phase11_finalization.py  test_phase12_upload_workflow.py  test_phase13_metrics_and_webcam_mode.py  test_phase6_session_sync.py  test_phase9_storage_layout.py  test_schema_compat_video_recordings.py  test_security_tokens.py  test_session_device_assignment.py  test_session_preflight_run.py  test_session_sampling_quality_history.py  test_sessions_start_countdown_contract.py  test_sessions_start_rollback.py  test_sessions_stop_command_flow.py  test_storage_monitor.py  test_video_recorder.py  test_ws_control_protocol.py  test_ws_integration.py  test_ws_runtime_backpressure.py  test_ws_runtime_countdown.py
(+166 files in other folders)
