[project]
name = "imu-collector-backend"
version = "0.1.0"
description = "FastAPI backend for multi-phone IMU collector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "protobuf>=5.27.0",
  "grpcio-tools>=1.64.0"
]

[project.optional-dependencies]
video = [
  "opencv-python>=4.10.0",
  "deface>=1.6.1"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0"
]

[tool.setuptools.packages.find]
include = ["app*", "generated*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
